<resources>
    <string name="app_name">GiBi</string>

    <string name="next">التالي</string>
    <string name="clicktochoose"> مرحبا بك \n إظغط الزر للذهاب إلى الإختيارات !</string>
    <string name="chooseaddon">إختر إحدى الإضافات</string>
    <string name="addimojis">إضافة الإيموجي</string>
    <string name="addthemes">إضافة الثيمات</string>
    <string name="addgroupes">إضافة مجموعات</string>
    <string name="rateus">تقييم التطبيق</string>
    <string name="emojichoice">قمت بإختيار الإيموجي</string>
    <string name="themechoice">قمت بإختيار الثيمات</string>
    <string name="groupchoice">قمت بإختيار المجموعات</string>
    <string name="wait_for_patch">إنتظر تنفيذ الباتش...!!</string>
    <string name="done_patching">تم التثبيت بنجاح!!</string>
    <string name="rate_ask">عليك الإنتظار من خمس دقائق حتى 24 ساعة لتفعيل إختيارك \n إستغل هذا الوقت في تقييم تطبيقنا بخمس نجوم وضع تعليقا \n عبارة شكر تكفي. </string>
    <string name="rate_us_link">https://play.google.com/store/apps/details?id=com.gibi.walter</string>
    <string name="admob_appid">ca-app-pub-5610412713517876~7685439242</string>
    <string name="admob_banner">ca-app-pub-5610412713517876/3403128042</string>
    <string name="admob_interstitial">ca-app-pub-5610412713517876/3335130694</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_link">https://sites.google.com/view/privacy0policy/home</string>
    <!--<string name="admob_appid">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial">ca-app-pub-3940256099942544/1033173712</string>-->

</resources>
