<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECE5DD"
    tools:context="com.gibi.walter.Main3Activity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#159788"
        android:minHeight="?attr/actionBarSize">
        <ImageView
            android:id="@+id/myToolbarIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/icon"/>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/mytxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/myToolbar"
        android:text="@string/chooseaddon"
        android:textSize="20sp"
        android:textColor="#000"/>
    <FrameLayout

        android:id="@+id/frameresult"
        android:layout_marginTop="10dp"
        android:padding="2dp"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@+id/mytxt"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="@drawable/framebg"/>

    <Button
        android:id="@+id/myNextButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/frameresult"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:background="@drawable/nextbtnselector"
        android:text="@string/next"
        android:textSize="20sp"
        />
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/admob_banner">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
