<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECE5DD"
    tools:context="com.gibi.walter.Main5Activity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#159788"
        android:minHeight="?attr/actionBarSize">
        <ImageView
            android:id="@+id/myToolbarIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/icon"/>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/txtDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myToolbar"
        android:text="@string/rate_ask"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textAlignment="center"
        android:textColor="#075E54"
        android:padding="2dp"
        />
    <ImageView
        android:id="@+id/imageDone"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/check_mark_done"
        android:layout_below="@+id/txtDone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        />

    <Button
        android:id="@+id/myNextButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/imageDone"
        android:background="@drawable/nextbtnselector"
        android:text="@string/rateus"
        android:textSize="20sp" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/admob_banner"
        >
    </com.google.android.gms.ads.AdView>
</RelativeLayout>
